Spoiler section is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -11,3 +11,5 @@ block content
     include layouts/modules/parts/news
     include layouts/modules/parts/groups
     include layouts/modules/parts/collective
+    include layouts/modules/parts/spoilers
+
