--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -1,7 +1,11 @@
 @import "functions"
 
 $defaultTransitionDuration: .3s
-$step: rem(30)
+
+$stepNumber: 30
+
+$step: rem($stepNumber)
+$halfStep: rem($stepNumber / 2)
 
 $mobileResponse: 600px
 
