Video section is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -12,4 +12,5 @@ block content
     include layouts/modules/parts/groups
     include layouts/modules/parts/collective
     include layouts/modules/parts/spoilers
+    include layouts/modules/parts/ourVideos
 
