--- a/src/layouts/modules/parts/spoilers.pug
+++ b/src/layouts/modules/parts/spoilers.pug
@@ -18,3 +18,4 @@ section
                     .spoiler__content(data-spoiler-wrapper="true")
                         div.spoiler__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину, которого я бы назвал зодчим счастливой жизни. Действительно, никто не отвергает, не презирает, не избегает наслаждений только из-за того, что это наслаждения, но лишь из-за того, что тех, кто не умеет разумно предаваться наслаждениям, постигают великие страдания.
             +usualButton('Задать свой вопрос', 'w-100')
+        +whiteButton('Смотреть все вопросы', 'w-100 mt-step')
