Gallery slider is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -13,4 +13,4 @@ block content
     include layouts/modules/parts/collective
     include layouts/modules/parts/spoilers
     include layouts/modules/parts/ourVideos
-
+    include layouts/modules/parts/ourGallery
