--- a/src/components/UI/slideButtons.pug
+++ b/src/components/UI/slideButtons.pug
@@ -1,7 +1,7 @@
-mixin slideButtons()
+mixin slideButtons(closer = false)
     .slide-button-container.slide-button-container-next
-        .slide-button-next.slide-button
+        .slide-button-next.slide-button(class= closer ? 'closer' : '')
             img(src="@img/slide-arrow.svg")
     .slide-button-container.slide-button-container-prev
-        .slide-button-prev.slide-button
+        .slide-button-prev.slide-button(class= closer ? 'closer' : '')
             img(src="@img/slide-arrow.svg")
