Main page is ready

--- a/src/index.pug
+++ b/src/index.pug
@@ -14,3 +14,6 @@ block content
     include layouts/modules/parts/spoilers
     include layouts/modules/parts/ourVideos
     include layouts/modules/parts/ourGallery
+    include layouts/modules/parts/achievements
+    include layouts/modules/parts/about
+    include layouts/modules/parts/usefulLinks
