--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -7,7 +7,7 @@ header
         .header
             div.header__rest
                 a.weakText(href="#") Сведения об образовательной организации
-                div.weakText.theme-switcher
+                div.weakText.theme-switcher#theme-switcher
                     svg.eyeIcon
                         use(href="@img/icons/icons.svg#eyeWeakVision")
                     | Версия для слабовидящих
