--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -2,6 +2,7 @@
 @import "assets/fonts"
 
 @import "themes/default"
+@import "themes/visually-impaired"
 
 @import "assets/vars"
 @import "assets/functions"
@@ -50,6 +51,12 @@ html
 
   @media screen and (max-width: $mobile)
     font-size: 3.333vw
+
+  &.theme-visually-impaired
+    font-size: 18px
+
+    @media screen and (max-width: $mobile)
+      font-size: 3.75vw
 
 
 body
