--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -11,6 +11,8 @@ $halfStep: rem(math.div($stepNumber, 2))
 
 $mobileResponse: 600px
 
-
-$mobile: 480px
+$mobileNumber: 480
+$mobile: $mobileNumber + px
 $tablet: 800px
+
+$sizeForWeakEyes: 24
