--- a/src/styles/themes/visually-impaired.sass
+++ b/src/styles/themes/visually-impaired.sass
@@ -9,7 +9,7 @@
   --footerLinkColor: #0074FF
 
   --superGrey: #212540
-  --lineBorderColor: #212540
+  --lineBorderColor: #E5E8EC
 
   --greyBackground: #EFF1F8
 
