--- a/src/styles/modules/header.sass
+++ b/src/styles/modules/header.sass
@@ -1,9 +1,67 @@
+@use 'sass:math'
+
 @import '../assets/functions'
 @import '../assets/mixins'
 @import '../assets/vars'
 
-$headerFirstResponse: 1000px
-$headerSecondResponse: 600px
+$headerFirstThemeResponse: 1300px
+$headerContactThemeReverse: 850px
+
+$headerSecondResponse: 650px
+$responseRestBlockForWeakEyes: 680px
+$headerFirstResponseNumber: 1000
+$headerFirstResponse: $headerFirstResponseNumber + px
+
+@mixin firstResponseMainBlock($var)
+  @media screen and (max-width: $var)
+    justify-content: space-between
+    width: 100%
+
+@mixin firstResponseContentBlock($var)
+  @media screen and (max-width: $var)
+    &:before, &:after
+      left: 0
+      width: 100%
+
+@mixin firstResponseContactBlocks($var)
+  @media screen and (max-width: $var)
+    justify-content: center
+    margin: rem(12) 0 0 0
+    flex-shrink: 1
+
+
+html.theme-visually-impaired
+  .header
+
+    &__rest
+      @media screen and (max-width: $responseRestBlockForWeakEyes)
+        flex-direction: column
+        text-align: center
+        gap: rem(5)
+
+    &__content
+      @include firstResponseContentBlock($headerFirstThemeResponse)
+
+    &__mainBlock
+      @include firstResponseMainBlock($headerFirstThemeResponse)
+
+    &__contacts
+      @include firstResponseContactBlocks($headerFirstThemeResponse)
+
+      @media screen and (max-width: $headerContactThemeReverse)
+        flex-direction: column
+        gap: 15px
+        text-align: center
+
+    &__telContainer
+      .pairWords
+        @media screen and (max-width: $headerContactThemeReverse)
+          justify-content: center
+
+    &__menu
+      @media screen and (max-width: $headerFirstResponse)
+        margin: 0 0 0 rem(30)
+        gap: rem(10)
 
 .header
   font-size: 1rem
@@ -30,26 +88,19 @@ $headerSecondResponse: 600px
       padding: em(12.5, 16) 0
 
     @include createLineBorder('both')
+    @include firstResponseContentBlock($headerFirstResponse)
 
-    @media screen and (max-width: $headerFirstResponse)
-      &:before, &:after
-        left: 0
-        width: 100%
 
   &__mainBlock
     display: flex
     align-items: center
-
-    @media screen and (max-width: $headerFirstResponse)
-      justify-content: space-between
-      width: 100%
+    @include firstResponseMainBlock($headerFirstResponse)
 
   &__menu
-    margin-left: em(30, 16)
+    margin: 0 16px 0 30px
     display: flex
     align-items: center
-    margin-right: 1rem
-    gap: rem(20)
+    gap: 20px
 
     & > ul
       display: flex
@@ -72,10 +123,7 @@ $headerSecondResponse: 600px
     flex-shrink: 0
     margin-left: 1rem
 
-    @media screen and (max-width: $headerFirstResponse)
-      justify-content: center
-      margin: rem(12) 0 0 0
-      flex-shrink: 1
+    @include firstResponseContactBlocks($headerFirstResponse)
 
     @media screen and (max-width: $headerSecondResponse)
       font-size: rem(12)
@@ -96,7 +144,7 @@ $headerSecondResponse: 600px
 
   &__socials
     display: flex
-    gap: rem(20)
+    gap: 20px
 
     @media screen and (max-width: $headerSecondResponse)
       gap: rem(10)
@@ -105,6 +153,10 @@ $headerSecondResponse: 600px
     display: block
     width: em(36, 16)
     height: em(36, 16)
+
+    img
+      width: 100%
+      height: 100%
 
     @media screen and (max-width: $headerSecondResponse)
       width: 2em
@@ -150,7 +202,7 @@ $headerSecondResponse: 600px
         transform: translateY(-50%) rotate(-45deg)
 
   &__burger
-    margin-right: .5em
+    margin-right: 8px
     width: em(18, 16)
     height: em(18, 16)
     position: relative
