--- a/src/styles/modules/parts/galleryItem.sass
+++ b/src/styles/modules/parts/galleryItem.sass
@@ -1,7 +1,21 @@
 @import "../../assets/mixins"
+@import "../../assets/vars"
 
-$galleryFirstTextResponse: 1000px
-$galleryMobileResponse: 600px
+$galleryFirstTextResponseNumber: 1000
+$galleryFirstTextResponse: $galleryFirstTextResponseNumber + px
+$galleryMobileResponseNumber: 600
+$galleryMobileResponse: $galleryMobileResponseNumber + px
+
+html.theme-visually-impaired
+
+  .galleryItem
+
+    @media screen and (max-width: $galleryFirstTextResponse)
+      font-size: vw($sizeForWeakEyes, $galleryFirstTextResponseNumber)
+
+    @media screen and (max-width: $galleryMobileResponse)
+      font-size: vw($sizeForWeakEyes, $galleryMobileResponseNumber)
+
 
 .galleryItem
   width: em(259, 16)
@@ -19,12 +33,15 @@ $galleryMobileResponse: 600px
 
 
   &__img
-    width: em(230, 16)
+    width: 100%
     height: em(123, 16)
+    max-height: 123px
     object-fit: cover
 
     img
       border-radius: .5em
+      width: 100%
+      object-fit: cover
 
   &__text
     @include setFonts(14, #000, 1.3, -0.411504, 800)
