--- a/src/styles/modules/parts/logo.sass
+++ b/src/styles/modules/parts/logo.sass
@@ -1,5 +1,9 @@
+@use 'sass:math'
+
 @import "../../assets/mixins"
 @import "../../assets/vars"
+
+
 
 .logo
   display: flex
@@ -18,7 +22,14 @@
   &__img
     width: rem(48)
     height: rem(49)
-    margin-right: em(15, 16)
+    margin-right: 15px
+
+    img
+      width: 100%
+      height: 100%
+
+  @media screen and (max-width: $mobile)
+    margin-right: rem(15)
 
   &__text
     @include setFonts(14, var(--textColor), 1, -0.4)
