--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -48,3 +48,4 @@ header
                         a.header__social(href="https://telegram.org" target="blank")
                             img(src="@img/telegram.svg" alt='Телеграм')
                     +usualButton('Обратная связь')
+    block breadcrumbs
