--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -16,3 +16,8 @@ $mobile: $mobileNumber + px
 $tablet: 800px
 
 $sizeForWeakEyes: 24
+
+
+$headerFirstResponseNumber: 1000
+$headerFirstResponse: $headerFirstResponseNumber + px
+$headerFirstThemeResponse: 1300px
