--- a/src/styles/modules/UI/switch.sass
+++ b/src/styles/modules/UI/switch.sass
@@ -2,6 +2,8 @@
 @import "../../assets/vars"
 
 .switch
+  min-width: em(26, 16)
+  min-height: em(18, 16)
   width: em(26, 16)
   height: em(18, 16)
   border-radius: 2em
