--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -1,8 +1,11 @@
 \:root
+
   --textColor: #212540
   --textHoverColor: #0074FF
   --h2Color: #141D2C
   --pColor: #323232
+
+  --breadcrumbsColor: #141D2C
 
   --footerRestBlockColor: #141D2C
   --footerLinkColor: #0074FF
@@ -68,3 +71,5 @@
   --tagsColor: #0074FF
 
   --galleryBorderColor: #E7E7EC
+
+  --messageBackground: #CCE3FF
