--- a/src/styles/modules/UI/input.sass
+++ b/src/styles/modules/UI/input.sass
@@ -13,16 +13,23 @@
   font-size: em(14, 16)
   background: #fff
   position: relative
+  border-radius: em(8, 14)
 
+  textarea
+    resize: none
+    min-height: em(138, 14)
+    vertical-align: bottom
+
+  textarea,
   input
     width: 100%
     height: 100%
     padding: em(13, 14)
     transition: $defaultTransitionDuration all
-    border-radius: em(8, 14)
     @include useBorder()
     @include useSecondFont(500)
     line-height: 1.1
+    border-radius: em(8, 14)
     color: var(--textColor)
     letter-spacing: em(-0.2, 16)
 
