--- a/src/styles/modules/UI/select.sass
+++ b/src/styles/modules/UI/select.sass
@@ -51,7 +51,7 @@
     input
       display: none
 
-    label
+    .select__div
       background: #ffffff
       padding: em(18, 14) em(18, 14) em(18, 14) 1em
       cursor: pointer
@@ -74,7 +74,7 @@
         opacity: 0
         transition: .5s opacity
 
-    input:checked + label
+    input:checked + div
       color: #fff
       background: var(--checkedSelectItemBackground)
       &:after
