--- a/src/styles/themes/visually-impaired.sass
+++ b/src/styles/themes/visually-impaired.sass
@@ -5,6 +5,8 @@
   --h2Color: #141D2C
   --pColor: #323232
 
+  --breadcrumbsColor: #141D2C
+
   --footerRestBlockColor: #141D2C
   --footerLinkColor: #0074FF
 
@@ -69,3 +71,5 @@
   --tagsColor: #0074FF
 
   --galleryBorderColor: #E7E7EC
+
+  --messageBackground: #CCE3FF
