--- a/src/layouts/modules/parts/bigBannerGrey.pug
+++ b/src/layouts/modules/parts/bigBannerGrey.pug
@@ -7,7 +7,7 @@ section
                 .banner__subtitle МДОАУ
                 .banner__title Детский сад №73
                 .banner__text Но чтобы вы поняли, откуда возникает это превратное представление людей, порицающих наслаждение и восхваляющих страдания, я раскрою перед вами всю картину и разъясню, что именно говорил этот человек, открывший истину.
-                +usualButton('Подробнее о нас', 'bigButton', "document.location.href='#'")
+                +usualButton('Подробнее о нас', 'bigButton', "document.location.href='about.html'")
             .banner__image
                 picture.img
                     source(srcset="@img/temporary/banner-1.png" media="(min-width: 601px)")
