--- a/src/styles/assets/vars.sass
+++ b/src/styles/assets/vars.sass
@@ -21,3 +21,6 @@ $sizeForWeakEyes: 24
 $headerFirstResponseNumber: 1000
 $headerFirstResponse: $headerFirstResponseNumber + px
 $headerFirstThemeResponse: 1300px
+
+$sidebarResponseNumber: 900
+$sidebarResponse: $sidebarResponseNumber + px
