--- a/src/styles/modules/breadcrumbs.sass
+++ b/src/styles/modules/breadcrumbs.sass
@@ -4,14 +4,12 @@
 
 html.theme-visually-impaired
 
-  .breadcrumbs
-
     @media screen and (max-width: $headerFirstThemeResponse)
       margin-top: em(15, 16)
 
 .breadcrumbs
   background: var(--greyBackground)
-  padding: em(24, 16) em(24, 16) em(15, 16)
+  padding: em(24, 16) 0 em(15, 16)
 
   @media screen and (max-width: $headerFirstResponse)
     margin-top: em(15, 16)
