--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -73,3 +73,6 @@
   --galleryBorderColor: #E7E7EC
 
   --messageBackground: #CCE3FF
+
+  --sidebarItemColor: #2F376D
+  --sidebarActiveItemBackground: #0074FF
