--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -16,6 +16,8 @@
 @import "modules/header"
 @import "modules/breadcrumbs"
 @import "modules/footer"
+@import "modules/pageLayout"
+@import "modules/sidebar"
 
 // UI modules
 @import "modules/UI/spoilers"
@@ -75,6 +77,7 @@ body
   display: flex
   flex-direction: column
   font-size: 1rem
+  overflow: visible
 
 
 main
@@ -97,6 +100,11 @@ h1
 
 h2
   @include setFonts(36, var(--h2Color), 1.2)
+
+  &.smallFont
+    font-size: 2em
+    line-height: 1.3
+    letter-spacing: em(-1, 32)
 
   .icon
     width: em(40, 36)
