Bwi for weak eyes theme

--- a/src/layouts/modules/main/header.pug
+++ b/src/layouts/modules/main/header.pug
@@ -7,7 +7,7 @@ header
         .header
             .header__rest
                 a.weakText(href="information.html") Сведения об образовательной организации
-                .weakText.theme-switcher#theme-switcher
+                .weakText.theme-switcher#theme-switcher.bvi-open
                     svg.eyeIcon
                         use(href="@img/icons/icons.svg#eyeWeakVision")
                     | Версия для слабовидящих
