--- a/src/information.pug
+++ b/src/information.pug
@@ -5,7 +5,7 @@ include components/UI/input
 include components/UI/usualButton
 include components/UI/textarea
 include components/breadcrumbs
-include components/aside
+include components/asides/aside
 
 block variables
     - var pageTitle = 'Сведения об образовательной организации'
