--- a/src/layouts/modules/parts/collective.pug
+++ b/src/layouts/modules/parts/collective.pug
@@ -25,4 +25,4 @@ section
                                     span
                                     | Подробнее
                 +slideButtons()
-        +whiteButton('Смотреть весь коллектив', 'mt-step w-100')
+        +whiteButton('Смотреть весь коллектив', 'mt-step w-100', 'document.location.href="collective.html"')
