--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -45,6 +45,8 @@
 @import "modules/parts/galleryItem"
 @import "modules/parts/achievements"
 @import "modules/parts/flexBox"
+@import "modules/parts/contactBlock"
+@import "modules/parts/pagination"
 
 
 html
