--- a/src/styles/themes/default.sass
+++ b/src/styles/themes/default.sass
@@ -76,3 +76,7 @@
 
   --sidebarItemColor: #2F376D
   --sidebarActiveItemBackground: #0074FF
+
+  --paginationColor: #212B36
+  --paginationDisabledColor: #919EAB
+  --paginationArrowColor: #C4CDD5
